deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketplace
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/application: marketplace
