deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    external-dns.alpha.kubernetes.io/hostname: x
    external-dns.alpha.kubernetes.io/target: ingress.kittykart.io
    cert-manager.io/issuer: origin-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: marketplace
spec:
  rules:
    - host: x
      http:
        paths:
        - backend:
            service:
              name: marketplace
              port:
                number: 80
          path: /
          pathType: Prefix
  tls:
    - hosts:
      - x
      secretName: x
